--- a/appengine_server/index.html
+++ b/appengine_server/index.html
@@ -13,9 +13,9 @@ var data = {{data|safe}};
 $(function() {
 var chart = d3.timeseries()
           .addSerie(data,{x:'date', y:'t', ci_up:'t_ci_up', ci_down:'t_ci_down'}, 
-                         {interpolate:'monotone', color:"#a6cee3", label:"temperature"})
+                         {interpolate:'linear', color:"#a6cee3", label:"temperature"})
           .addSerie(data,{x:'date', y:'h', ci_up:'h_ci_up', ci_down:'h_ci_down'}, 
-                         {interpolate:'monotone', color:"#c6aeb3", label:"humidity"})
+                         {interpolate:'linear', color:"#c6aeb3", label:"humidity"})
           .width(1200)
 chart('#chart')
 });
