--- a/appengine_server/index.html
+++ b/appengine_server/index.html
@@ -46,7 +46,10 @@ chart2('#chart2')
 
 <body>
 <h1>Temperature and Humidity</h1>
+<hr/>
+<h2>DHT11</h2>
 <div id="chart1"></div>
+<h2>DHT22</h2>
 <div id="chart2"></div>
 </body>
 </html>
